@@ -14,6 +14,11 @@ Version 0.4c
  - Cooldowns on Bash/Grand slam reduced
  - The rest of the physical skills replaced
  - EnemySkills replaced: Scorpion, Orchid, Gol, Corishev
+ - Seduction skills replaced
+  + Tease
+  + Seduce
+  + StripTease
+  + Inflame
 
 --------------------------------------------
              PREVIOUS VERSIONS
